# antrobot_description

./: README.md  package.xml  setup.cfg  setup.py
config/: display.rviz
launch/: display.launch.py  gazebo.launch.py
meshes/: realsense_link.stl  rpicam_link.stl  rplidar_link_1.stl  wheel_left_link.stl  wheel_right_link_1.stl
urdf/: antrobot.gazebo  antrobot.trans  antrobot.urdf  antrobot.xacro  materials.xacro
worlds/: empty_world.sdf
